--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@remixicon/react": "^4.6.0",
+    "@szhsin/react-accordion": "^1.4.1",
+    "google-map-react": "^2.2.5",
     "next": "15.2.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
